--- a/proyecto-medical-app/package.json
+++ b/proyecto-medical-app/package.json
@@ -11,14 +11,19 @@
   },
   "dependencies": {
     "@expo/webpack-config": "~0.16.2",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
+    "expo-blur": "~10.0.3",
     "expo-status-bar": "~1.3.0",
-    "firebase": "^9.8.1",
+    "firebase": "^9.6.11",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
-    "webpack-dev-server": "~3.11.0"
+    "webpack-dev-server": "^4.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
