--- a/proyecto-medical-app/package.json
+++ b/proyecto-medical-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/webpack-config": "~0.16.2",
     "@react-native-community/datetimepicker": "^6.1.3",
+    "@react-native-firebase/app": "^14.11.0",
     "@react-native-firebase/firestore": "^14.11.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
