--- a/proyecto-medical-app/package.json
+++ b/proyecto-medical-app/package.json
@@ -13,13 +13,16 @@
     "@expo/webpack-config": "~0.16.2",
     "@react-native-community/datetimepicker": "^6.1.3",
     "@react-native-firebase/app": "^14.11.0",
+    "@react-native-firebase/auth": "^14.11.0",
     "@react-native-firebase/firestore": "^14.11.0",
+    "@react-native-firebase/messaging": "^14.11.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
     "expo-blur": "~10.0.3",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.6.11",
+    "firebase-admin": "^10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
