--- a/proyecto-medical-app/package.json
+++ b/proyecto-medical-app/package.json
@@ -20,6 +20,8 @@
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
     "expo-blur": "~10.0.3",
+    "expo-clipboard": "~3.0.1",
+    "expo-image-picker": "~13.1.1",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.6.11",
     "firebase-admin": "^10.2.0",
@@ -29,6 +31,7 @@
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.7",
     "webpack-dev-server": "^4.9.0"
   },
