--- a/proyecto-medical-app/package.json
+++ b/proyecto-medical-app/package.json
@@ -10,16 +10,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/webpack-config": "~0.16.2",
-    "@react-native-community/datetimepicker": "^6.1.3",
+    "@expo/webpack-config": "~0.16.21",
+    "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-firebase/app": "^14.11.0",
     "@react-native-firebase/auth": "^14.11.0",
     "@react-native-firebase/firestore": "^14.11.0",
     "@react-native-firebase/messaging": "^14.11.0",
+    "@react-navigation/drawer": "^6.4.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "@react-navigation/stack": "^6.2.1",
     "expo": "~45.0.0",
-    "expo-blur": "~10.0.3",
+    "expo-blur": "~11.1.0",
     "expo-clipboard": "~3.0.1",
     "expo-image-picker": "~13.1.1",
     "expo-status-bar": "~1.3.0",
@@ -28,7 +30,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-paper": "^4.12.1",
+    "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-uuid": "^2.0.1",
