--- a/proyecto-medical-app/package.json
+++ b/proyecto-medical-app/package.json
@@ -22,12 +22,14 @@
     "expo-blur": "~10.0.3",
     "expo-clipboard": "~3.0.1",
     "expo-image-picker": "~13.1.1",
+    "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.6.11",
     "firebase-admin": "^10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-maps": "^1.0.0",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
